force-app/main/default/objects/Template_Detail__c/Template_Detail__c.object-meta.xml
<CustomObject>
    <label>Template Detail</label>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Template Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>