force-app/main/default/objects/Template_Detail__c/fields/sequence__c.field-meta.xml
<CustomField>
    <fullName>sequence__c</fullName>
    <label>sequence</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>