force-app/main/default/objects/Template_Detail__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Report</fullName>
            </value>
            <value>
                <fullName>Clinician Administered</fullName>
            </value>
            <value>
                <fullName>Sessions</fullName>
            </value>
            <value>
                <fullName>10 Day Check</fullName>
                <isActive>false</isActive>
                <label>10 Day Check</label>
            </value>
            <value>
                <fullName>Checking</fullName>
                <isActive>false</isActive>
                <label>Checking</label>
            </value>
            <value>
                <fullName>Closure</fullName>
                <isActive>false</isActive>
                <label>Closure</label>
            </value>
            <value>
                <fullName>Day 1 Checking</fullName>
                <isActive>false</isActive>
                <label>Day 1 Checking</label>
            </value>
            <value>
                <fullName>Day 2 Checking</fullName>
                <isActive>false</isActive>
                <label>Day 2 Checking</label>
            </value>
            <value>
                <fullName>Day 3 Checking</fullName>
                <isActive>false</isActive>
                <label>Day 3 Checking</label>
            </value>
            <value>
                <fullName>Diary</fullName>
                <isActive>false</isActive>
                <label>Diary</label>
            </value>
            <value>
                <fullName>PCT Booster</fullName>
                <isActive>false</isActive>
                <label>PCT Booster</label>
            </value>
            <value>
                <fullName>PCT Explanation</fullName>
                <isActive>false</isActive>
                <label>PCT Explanation</label>
            </value>
            <value>
                <fullName>TM Booster</fullName>
                <isActive>false</isActive>
                <label>TM Booster</label>
            </value>
            <value>
                <fullName>TM Instruction</fullName>
                <isActive>false</isActive>
                <label>TM Instruction</label>
            </value>
            <value>
                <fullName>TM Intro</fullName>
                <isActive>false</isActive>
                <label>TM Intro</label>
            </value>
            <value>
                <fullName>Trauma Education</fullName>
                <isActive>false</isActive>
                <label>Trauma Education</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>