force-app/main/default/objects/Template_Detail__c/fields/Template_Master__c.field-meta.xml
<CustomField>
    <fullName>Template_Master__c</fullName>
    <label>Template Master</label>
    <referenceTo>Template_Master__c</referenceTo>
    <relationshipLabel>Template Details</relationshipLabel>
    <relationshipName>Template_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>