force-app/main/default/objects/Template_Detail__c/recordTypes/Study_Session.recordType-meta.xml
<RecordType>
    <fullName>Study_Session</fullName>
    <active>true</active>
    <label>Study Session</label>
</RecordType>